add checker in realtime

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-file/
-include/
-install/
-static/
-theme/
-!module/
-module/*
-!module/livenotification/
+/file/
+/include/
+/install/
+/static/
+/theme/
+!/module/
+/module/*
+!/module/livenotification/
 api.php
 auth.php
 favicon.ico
